sets up docker compose

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#Below is the prod version
+spring.datasource.url=jdbc:postgresql://db:5432/postgres
+
 spring.datasource.password=bondstone
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
