updating prod env

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -97,6 +97,7 @@
                         </dependency>
                     </annotationProcessorPaths>
                     <compilerArgs>
+                        <arg>-parameters</arg>
                         <compilerArg>
                             -Amapstruct.defaultComponentModel=spring
                         </compilerArg>
