--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-cookie": "^2.2.1",
     "lucide-react": "^0.439.0",
     "next": "14.2.7",
     "react": "^18",
