--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.7",
     "js-cookie": "^2.2.1",
     "lucide-react": "^0.439.0",
-    "next": "14.2.7",
+    "next": "^14.2.20",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.1"
