--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.7",
+    "cookies-next": "^5.0.2",
     "js-cookie": "^2.2.1",
     "lucide-react": "^0.439.0",
-    "next": "^14.2.20",
+    "next": "^15.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.1"
