--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - homevideos_network
 
   backend:
     build: ./backend
@@ -26,6 +28,8 @@ services:
       SPRING_DATASOURCE_PASSWORD: bondstone
       SPRING_REDIS_HOST: redis
       SPRING_REDIS_PORT: 6379
+    networks:
+      - homevideos_network
 
   frontend:
     build:
@@ -36,12 +40,19 @@ services:
       - backend
     ports:
       - "3000:3000"
+    networks:
+      - homevideos_network
 
   redis:
     image: redis:latest
     container_name: homevideos_redis
     ports:
       - "6379:6379"
+    networks:
+      - homevideos_network
+
+networks:
+  homevideos_network:
 
 volumes:
   postgres_data:
