--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,16 +5,20 @@ COPY package.json package-lock.json ./
 RUN npm ci
 
 COPY . .
+
 RUN npm run build
 
 FROM node:18-alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
+ENV NEXT_TELEMETRY_DISABLED 1
 
 COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
 
 EXPOSE 3000
 
-CMD ["node", ".next/standalone/server.js"]
+CMD ["node", "server.js"]
