--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      NEXT_PUBLIC_API_URL: "https://homevideos.smbirch.com/api"
+      NEXT_PUBLIC_API_URL: "http://backend:/api"
     networks:
       - homevideos_network
 
