--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,8 @@ services:
     ports:
       - "3000:3000"
     environment:
-      NEXT_PUBLIC_API_URL: "https://homevideos.smbirch.com/api"  
-      INTERNAL_API_URL: "http://backend:8080/api"
+      NEXT_PUBLIC_API_URL: "https://homevideos.smbirch.com/api"
+#      INTERNAL_API_URL: "http://backend:8080/api"
     networks:
       - homevideos_network
 
