--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,10 +49,12 @@ services:
   redis:
     image: redis:latest
     container_name: homevideos_redis
+    command: redis-server --bind 0.0.0.0
     ports:
       - "6379:6379"
     networks:
       - homevideos_network
+
 
 networks:
   homevideos_network:
