--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
 
   backend:
     build: ./backend
+    links:
+      - redis-server
     container_name: homevideos_backend
     depends_on:
       - db
@@ -46,7 +48,8 @@ services:
     networks:
       - homevideos_network
 
-  redis:
+  redis-server:
+    hostname: redis
     image: redis:latest
     container_name: homevideos_redis
     command: redis-server --bind 0.0.0.0
